<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="15dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:padding="10dp"
        android:id="@+id/imageAvatar"
        android:contentDescription="@string/app_name"
        android:layout_height="100dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userUrlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray" />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>