<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_marginTop="16dp"
     android:orientation="horizontal"
     android:layout_height="wrap_content">

     <EditText
         android:id="@+id/searchEditText"
         android:layout_width="0dp"
         android:autofillHints="name"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:hint="@string/search_hint"
         android:imeOptions="actionSearch"
         android:inputType="text"
         />
     <Button
         android:layout_width="wrap_content"
         android:padding="2dp"
         android:layout_marginStart="3dp"
         android:id="@+id/searchButton"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="@string/search"
         android:layout_height="wrap_content"/>

 </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_height="wrap_content"
            tools:listitem="@layout/layout_item_user" />

        <TextView
            android:id="@+id/noDataFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_data_found"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>



</LinearLayout>